--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap');
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: 'Noto Sans TC', sans-serif;
+  list-style: none;
+  text-decoration:none;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+	line-height: 1.5;
+	font-family: 'Noto Sans TC', sans-serif;
+}
+.wrapper{
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
 }
